--- a/client/src/styles/ProductPageLayout.css
+++ b/client/src/styles/ProductPageLayout.css
@@ -17,9 +17,24 @@
   height: 40px;
 }
 
+.price, .stock {
+  display: flex;
+  flex-flow: row;
+  height: 40px;
+  margin-bottom: 10px;
+}
+
+.priceInput, .stockInput{
+  margin-left: 10px;
+}
+
 .totalSold {
   display: flex;
   flex-flow: row;
   margin-left: 20px;
   height: 40px;
+}
+
+.updateButton{
+  float: right;
 }
