--- a/client/src/styles/ProductPageLayout.css
+++ b/client/src/styles/ProductPageLayout.css
@@ -8,13 +8,12 @@
 }
 
 .itemName {
-  margin-right: 20px;
+  /* margin-right: 20px; */
   font-weight: bold;
 }
-.quantity {
-  display: flex;
-  flex-flow: row;
-  height: 40px;
+
+.priceFormDiv, .stockFormDiv{
+  margin-left: 10px;
 }
 
 .price, .stock {
@@ -22,9 +21,6 @@
   flex-flow: row;
   height: 40px;
   margin-bottom: 10px;
-}
-
-.priceInput, .stockInput{
   margin-left: 10px;
 }
 
@@ -36,5 +32,10 @@
 }
 
 .updateButton{
-  float: right;
+  /* float: right; */
+  margin-left: 10px;
+}
+
+.formDiv{
+  display: flex;
 }
