--- a/client/src/styles/ProductPageLayout.css
+++ b/client/src/styles/ProductPageLayout.css
@@ -1,6 +1,7 @@
 .itemDiv {
   display: flex;
   flex-flow: row;
+  justify-content: space-between;
 }
 
 .quantityInput {
@@ -10,6 +11,7 @@
 .itemName {
   /* margin-right: 20px; */
   font-weight: bold;
+  font-size: 12px;
 }
 
 .priceFormDiv, .stockFormDiv{
@@ -31,7 +33,14 @@
   height: 40px;
 }
 
-.updateButton{
+.updateSearchButton{
+  float: right;
+  margin-left: auto;
+  margin-right: auto;
+  width: 8em;
+}
+
+.updateTreeButton{
   /* float: right; */
   margin-left: 10px;
 }
